# CPP

./: CMakeLists.txt  README.md  try.cpp
Computer-Store-Management_C++/: Class.cpp
hw1/: a.out  mse  mse.cpp  nameout1  nameout1.cpp  nameout2  nameout2.cpp  prog  temp1  temp1.cpp  temp2  temp2.cpp  temp3  temp3.cpp
hw10/02/: expr.cpp  prog
hw2/01/: input1.txt  style  style01.cpp
hw2/02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input2.txt  score  score.cpp  score_function.cpp  score_function.hpp
hw2/03/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  picture  picture.cpp  picture_functions.cpp  picture_functions.hpp  prog
hw3/01/: data1.txt  data2.txt  separate.cpp  seperate
hw3/02/: average  average.cpp  data.txt
hw3/03/: split  split.cpp
hw4/: register  register.cpp
hw5/01/: book.cpp  prog
hw5/02/: picture.cpp  prog
hw6/01/: inverse.cpp  prog
hw6/02/: picture.cpp  prog
hw7/01/: memory_person.cpp  person.cpp  prog
hw7/02/: memory_point.cpp  point.cpp  prog
hw8/: prog  text.cpp
hw9/: prog  writer.cpp
lab1/: lab1_3.cpp  pattern1  pattern1.cpp  pattern2  pattern2.cpp  pattern3  pattern3.cpp  random.hpp  try_doc  try_doc.cpp  try_name  try_name.cpp  try_nameout  try_nameout.cpp  try_nameout2  try_nameout2.cpp  try_nameout2b  try_nameout2b.cpp  try_nameout2c  try_nameout2c.cpp
lab10/03/: ragged  ragged.cpp
lab10/Lab10/: RaggedArray.hpp  q31.cpp  q32.cpp
lab2/: CMakeList.txt  CMakeLists.txt  arrow_pattern1  arrow_pattern1.cpp  arrow_pattern2  arrow_pattern2.cpp  prog  style_functions.cpp  style_functions.hpp  test.html  try_pattern  try_pattern.cpp  unstylize.cpp
lab3/01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data.txt  draw.cpp  drawing.cpp  printing.cpp  prog  shifting.cpp  testsvg.html  three.cpp  two.cpp
lab4/: l1.cpp  l2.cpp  l3.cpp  prog
lab5/01/: book  book.cpp
lab5/02/: picture.cpp
lab6/: prog  try.cpp
lab6/01/: byte  byte.cpp
lab7/01/: nn.cpp  pair.cpp  prog  substitude.cpp
lab7/02/: ragged.cpp
lab8/01/: city.cpp
lab8/02/: hero.cpp  heroInput.cpp  heroInput2.cpp  hhh.txt  prog
lab9/02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hero.cpp  hero_html  html_test  print.html  print.txt
lab9/03/: shape.cpp
miniproject/: CMakeCache.txt  CMakelists.txt  Makefile  chart  chart.cpp  chart_class.cpp  chart_new.cpp  cmake_install.cmake  draw.html  graph.html
(+25 files in other folders)
